# from-mathematics-to-generic-programming

./: README.md  flake.nix
02-first-algorithm/: x02-first-algorithm.cabal
02-first-algorithm/src/: AdditionChain.hs  Multiply.hs
02-first-algorithm/test/: Main.hs  MultiplyTest.hs
