cabal-version:      3.0
name:               x02
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Multiply
        AdditionChain

    build-depends:
        base ^>=4.16.4.0
        , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        x02

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        MultiplyTest
    build-depends:
        base ^>=4.16.4.0
        , x02
        , tasty
        , tasty-quickcheck
        , checkers
